# image-search-service

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  .test_durations  .tool-versions  CLAUDE.md  DUAL_MODE_CLUSTERING_SUMMARY.md  FINDINGS_MPS_WORKER_CRASH.md  GPU_MEMORY_FIX_IMPLEMENTATION.md  GPU_MEMORY_FIX_SUMMARY.md  HASH_BACKFILL_IMPLEMENTATION.md  IMPLEMENTATION_MODEL_CACHING.md  MPS_MEMORY_EXHAUSTION_ANALYSIS.md  MPS_MEMORY_FIX_ANALYSIS.md  Makefile  PACKAGE_AND_ARCHITECTURE_ANALYSIS.md  PHASE2_IMPLEMENTATION_SUMMARY.md  QUICKSTART_TEST_RQ_WORKER.md  README.md  ROOT_CAUSE_AND_FIX.md  TEST_RQ_WORKER_IMPLEMENTATION_SUMMARY.md  WORKHORSE_PRELOAD_FIX.md  alembic.ini  docker-compose.dev.yml  pyproject.toml  test_output.txt
.github/workflows/: ci.yml
docs/: EXIF_API_SCHEMA_CHANGES.md  FILE_WATCHER_GUIDE.md  TRAINING_SYSTEM_USAGE.md  api-contract.md  database-migration-guide.md  exif-date-extraction-fix.md  exif-integration-summary.md  face-clusters-conversion-plan-2025-12-30.md  faces.md  feature-auto-rescan-on-recompute.md  fix-centroid-duplicate-key-constraint.md  siglip-quick-start.md  training-dialog-improvement-suggestions.md
docs/api-examples/: asset-with-exif.json
docs/fixes/: exif-null-byte-sanitization.md
docs/implementation/: IMPLEMENTATION_CHECKLIST.md  README.md  admin-data-deletion-plan.md  dual-mode-clustering-plan.md  multi-platform-device-support-plan.md
docs/research/: alembic-migration-guide-rails-2026-01-11.md  codebase-analysis-2025-12-19.md  face-assignment-404-bug-analysis-2025-12-25.md  face-backfill-batch-processing-analysis-2025-12-25.md  face-clustering-deep-analysis-2025-12-30.md  face-suggestion-detail-enhancement-plan.md  git-history-analysis-30days-2026-01-05.md  ml-gpu-cuda-implementation-analysis-2025-12-26.md  people-filter-analysis-2025-12-29.md  people-filter-implementation-plan-2025-12-29.md  prototype-image-control-suggestions.md  qdrant-deletion-capabilities-2024-12-19.md  qdrant-integration-analysis-2025-12-19.md  thumbnail-regeneration-guide-2025-12-27.md  training-session-reporting.md
docs/test-quality/: README.md  coverage-gaps.md  recommendations.md  strengths.md  test-smells.md  weaknesses.md
scripts/: README_TEST_RQ_WORKER.md  backfill_exif.py  backfill_person_ids.py  create_siglip_collection.py  enable_quantization.py  gdrive_oauth_bootstrap.py  migrate_to_temporal_prototypes.py  repair_qdrant_person_ids.py  rollback_temporal_prototypes.py  run_test_worker.sh  test_rq_worker.py
src/image_search_service/: __init__.py  main.py
tests/: README_UNIFIED_PEOPLE_TESTS.md  __init__.py  conftest.py  conftest_postgres.py  constants.py  test_health.py  test_main.py
tests/api/: README_REGRESSION_TESTS.md  conftest.py  test_admin.py  test_categories.py  test_clusters_filtering.py  test_compose_search.py  test_face_session_suggestions.py  test_face_suggestion_cleanup.py  test_face_suggestions.py  test_face_suggestions_list.py  test_faces_cluster_confidence.py  test_faces_routes.py  test_faces_routes_extended.py  test_hybrid_search.py  (+36 more)
(+235 files in other folders)
